= Change Log =

== MCX 0.5.1 (Black Hole - update 1), FangQ <fangq nmr mgh harvard edu> ==

 2011-05-03 use the expected absorption for normalization to reduce non-atomic impact
 2011-04-26 fix a serious shared-mem buffer length bug (can cause crash)
 2011-04-26 MCXLAB now accepts crop0/crop1 fields to specify shared-mem region
 2011-03-25 new GPU-ocelot compilation flag

== MCX 0.5.0 (Black Hole), FangQ <fangq nmr mgh harvard edu> ==

 2011-03-18 update documents, get ready to release 0.5.0
 2011-03-18 gracefully handle exceptions in MCXLAB
 2011-03-17 add validation scripts for MCXLAB/MCX, fix a bug for saving flux
 2011-03-16 add MCXLAB example scripts
 2011-03-15 extensive debugging with the --unitinmm flag
 2011-03-09 MCXLAB now returns flux and detected photon in Matlab and Octave
 2011-03-03 add -E to seed RNG from command line
 2010-12-28 use negative -R to enable cachebox defined in the input file, fix time wraping
 2010-08-08 debug make mex option for Linux
 2010-08-09 first import of MCXLAB - MCX for Matlab and Octave
 2010-08-08 debug and test --unitinmm flag
 2010-08-05 initial support for reflection at internal boundaries
 2010-08-05 estimate maxgate when using the autopilot mode
 2010-08-02 fix a bug when saving multiple blocks of mch

== MCX 0.4.9 (Black Hole-beta), FangQ <fangq nmr mgh harvard edu> ==

 2010-08-01 update documentation and release v0.5 beta (aka 0.4.9)
 2010-08-01 fix a critical bug for pre-Fermi cards,validated MCX on CC11,13,20
 2010-07-31 enable -n for photon number, disable -m, report simulation speed
 2010-07-30 fix a bug when reading medium index with detector mask
 2010-07-29 use atomic with shared memory cache to improve accuracy near the source
 2010-07-28 add example for validation of MCX in heterogeneous media
 2010-07-28 use RNG for transmission/reflection test
 2010-07-28 use column major as the internal array format
 2010-07-27 support saving detected photons, but got 25% slower